syntax = "proto3";

package pb;

option go_package="server/api/grpc/pb";

message ErrorDetail {
  ErrorCode code    = 1;
  string    message = 2;
}

enum ErrorCode {
  UNKNOWN            = 0;
  NOT_FOUND          = 1;
  INVALID_ARGUMENT   = 2;
  CONTENT_EXPIRED    = 3;
  FORBIDDEN          = 4;
  UNEXPECTED         = 5;
}
